--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,23 @@
 {
   "name": "basic-month-name",
   "description": "A culture's name for a given month",
-  "version": "0.5.0",
+  "version": "0.6.2-pre",
   "license": "MIT",
   "main": "basic-month-name.html",
   "dependencies": {
-    "basic-element": "basic-web-components/basic-element#^0.5.0"
+    "basic-shared": "basic-web-components/basic-shared#master",
+    "polymer": "Polymer/polymer#^1.0.0"
   },
   "devDependencies": {
-    "basic-framed-content": "basic-web-components/basic-framed-content#^0.5.0"
+    "basic-framed-content": "basic-web-components/basic-framed-content#master",
+    "web-component-tester": "*"
   },
   "keywords": [
     "basic-web-components",
     "web-components"
   ],
   "ignore": [
-    "**/.*"
+    "**/.*",
+    "/test/"
   ]
 }
